--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ flexible-jekyll-master/
 
 
 
+_posts/2017-04-06-how-i-rest-from-work.markdown
+_posts/2017-04-06-welcome-to-jekyll.markdown
+_posts/2017-09-10-conference-on-javascript.markdown
+_posts/2017-09-12-10-tips-to-improve-your-workflow.markdown
+_posts/2017-09-12-how-to-start-programming.markdown
+_posts/2017-09-12-the-best-organizer-software.markdown
