github pages init. url / baseurl

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ _posts/2017-09-10-conference-on-javascript.markdown
 _posts/2017-09-12-10-tips-to-improve-your-workflow.markdown
 _posts/2017-09-12-how-to-start-programming.markdown
 _posts/2017-09-12-the-best-organizer-software.markdown
+_posts/2025-02-26-post-example.md
